@@ -33,6 +33,7 @@
     + Fixed BGP Admin isn't working (#2631);
     + do not show statistics in dashboard widget for disabled modules (#2602);
     + MySQL 8.0 compatibility. (#2646,#2239,#3036);
+    + MariaDB Galera Cluster compatibility (#2498,#3413);
     + Permit non-numeric postcodes for customers (#2393);
     + Bandwidth calculator - 400 Bad Request (#1807,#2648);
     + Table layout not aligned (#2656,#3105,#3113);
@@ -64,6 +65,7 @@
     + Exclude IPv6 from Ping and Discovery scans (#3354);
     + Fix for SAML/2FA login redirection after timeout (#3492);
     + php_sessions table doesn't exist error when upgrading (#3417);
+    + Changelog data too long for column errors (#3376,#3398);
     + API:
         + Fixed /user/ calls for SSL with app code (static app code);
         + Address IP field not displayed when using filter_by (#2934);
